# cold-start-nx

./: .SRCINFO  .build_android.sh  .build_switch.sh  .build_wiiu.sh  .gitignore  CHANGELOG_DRAFT.md  CLAUDE.md  CMakeLists.txt  COMMIT_MSG_DRAFT.txt  LICENSE  MODDING.md  Makefile  Makefile.wiiu  PKGBUILD  README.md  best_run.txt  build.ps1  build_all.ps1  build_all.sh  build_full.txt  bundle.sh  bundle.sh.in  butler-push.sh  cold_start.lst  cold_start.nacp  compile_commands.json  get_ip.vbs  make_win_zip.sh  mingw_fix.h  modconfig.cfg  release-bundle.sh  story draft - spoilers.md  toolchain-windows.cmake
.github/workflows/: build-macos.yml  build.yml  sync-readme.yml  upload-release-artifacts.yml
android/: build.gradle.kts  settings.gradle.kts  setup_sdl.sh  sign_apk.sh
android/app/: build.gradle.kts
android/app/jni/: CMakeLists.txt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/generated-assets/: romfs_filelist.txt
android/app/src/main/java/com/coldstart/game/: ColdStartActivity.java
build-pc/: CMakeCache.txt  Makefile  cmake_install.cmake  cold_start
build-server/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
build-win/: CMakeCache.txt  Makefile  bundle.sh  cmake_install.cmake  servers.txt
build-win-wsl/: CMakeCache.txt
deploy/digitalocean/: cold_start.service  install_server.sh  update_server.sh
mods/abibus/: mod.cfg
mods/abibus/maps/: Untitled.csm  titled.csm
mods/test/: mod.cfg
mods/test/maps/: test.csm
resources/: app.manifest  app.rc
romfs/maps/: cold_start_a1.csc  cold_start_a1.csm  construct.csm
source/: assets.cpp  assets.h  bomb.h  camera.cpp  camera.h  charformat.cpp  charformat.h  combat.cpp  constants.h  content.cpp  coop.cpp  cutscene.cpp  cutscene.h  cutscene_editor.cpp  cutscene_editor.h  discord_rpc.cpp  discord_rpc.h  editor.cpp  editor.h  enemy.h  entity.h  game.cpp  game.cpp.bak  game.h  game_internal.h  gamemode.cpp  gamemode.h  input.cpp  main.cpp  mapformat.cpp  mapformat.h  mappack.cpp  mappack.h  mod.cpp  mod.h  mods.cpp  multiplayer.cpp  netmenus.cpp  network.cpp  network.h  (+19 more)
source/enet/: unix.c
tools/: gen_sample_map.cpp
